# rickity

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  file_sync.py  host_api.sh  release
__releases__/: config.ini
api/: Cargo.toml  config_template.ini
api/src/: api.rs  db_conn.rs  habits.rs  lib.rs  main.rs
api/src/util/: datetime_util.rs  mod.rs  settings.rs
api/tests/: test_habits_endpoints.rs
app/: .dockerignore  Dockerfile  api.service  habits.db  main.py  models.py  requirements.txt  sync_sounds.py  test_timer_websocket.py  timer.db
app/database/: models.py
app/habits/database/: database.py  models.py
app/habits/repositories/: habit_log_repository.py  habit_repository.py
app/migrations/: migrate.py
app/repositories/: habit_log_repository.py  habit_repository.py
app/timer/: models.py  routes.py  websocket_manager.py
app/timer/database/: database.py  models.py
app/utils/: date_utils.py  logging.py
cli/: client.py  config.ini  main.py  requirements.txt
doc/: api.md  database.md  software_stack.md
frontend/: .htaccess  index.html  today.html
frontend/css/: styles.css
frontend/habits/: habits.html  today.html
frontend/js/: common.js  index.js  today.js
frontend/timer/: timer.html  timer_detail.html
macos_app/: .gitignore  README.md  requirements.txt  run.py  test_app.sh
macos_app/src/: api_client.py  config.py  floating_timer.py  main.py  main_window.py  utils.py
services/fs/: config.json  file_sync.py
web/: package-lock.json  package.json
web/src/: App.js  config_template.js
web/src/habits/: Habit.css  (+4 more)
(+8 files in other folders)
