[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api"
path = "./src/lib.rs"


[dependencies]
config = "0.14.0"
actix-web = "4.0"
actix-cors = "0.6"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4"]}
log = "0.4"
simple_logger = "4.3.3"

[dev-dependencies]
actix-web = "4.0"
actix-rt = "2.5"
